--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,17 +24,29 @@
 - name: Configure defaults file
   ansible.builtin.lineinfile:
     path: /usr/share/applications/mimeapps.list
-    line: "[Default Applications]"
+    line: "{{ item }}"
     state: present
     create: true
     mode: "0644"
     owner: root
     group: root
+  loop:
+    - "[Default Applications]"
+    - "[Added Associations]"
 
 - name: Set Sublime as default editor
   ansible.builtin.lineinfile:
     path: /usr/share/applications/mimeapps.list
     insertafter: "[Default Applications]"
+    line: "{{ item.key }}={{ item.value }}"
+    state: present
+  loop: "{{ sublime_mimetypes | dict2items }}"
+
+
+- name: Set Sublime as default editor
+  ansible.builtin.lineinfile:
+    path: /usr/share/applications/mimeapps.list
+    insertafter: "[Added Associations]"
     line: "{{ item.key }}={{ item.value }}"
     state: present
   loop: "{{ sublime_mimetypes | dict2items }}"
