--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,8 +40,8 @@
     insertafter: "[Default Applications]"
     line: "{{ item.key }}={{ item.value }}"
     state: present
+    firstmatch: true
   loop: "{{ sublime_mimetypes | dict2items }}"
-
 
 - name: Set Sublime as default editor
   ansible.builtin.lineinfile:
