--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,9 +38,9 @@
   ansible.builtin.lineinfile:
     path: /usr/share/applications/mimeapps.list
     insertafter: "[Default Applications]"
+    insertbefore: "[Added Associations]"
     line: "{{ item.key }}={{ item.value }}"
     state: present
-    firstmatch: true
   loop: "{{ sublime_mimetypes | dict2items }}"
 
 - name: Set Sublime as default editor
@@ -49,5 +49,4 @@
     insertafter: "[Added Associations]"
     line: "{{ item.key }}={{ item.value }}"
     state: present
-    firstmatch: true
   loop: "{{ sublime_mimetypes | dict2items }}"
