--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,7 @@
 - name: Set Sublime default application
   ansible.builtin.lineinfile:
     path: /usr/share/applications/mimeapps.list
-    insertbefore: "[Added Associations]"
+    insertbefore: "^[Added Associations]$"
     line: "{{ item.key }}={{ item.value }}"
     state: present
     firstmatch: true
@@ -46,7 +46,7 @@
 - name: Set Sublime added associations
   ansible.builtin.lineinfile:
     path: /usr/share/applications/mimeapps.list
-    insertafter: "[Added Associations]"
+    insertafter: "^[Added Associations]$"
     line: "{{ item.key }}={{ item.value }}"
     state: present
     firstmatch: true
