--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 sublime_mimetypes:
-  application/xhtml+xml: sublime_text.desktop
-  application/x-mswinurl: sublime_text.desktop
-  text/markdown: sublime_text.desktop
-  text/plain: sublime_text.desktop
+  - application/xhtml+xml
+  - application/x-mswinurl
+  - text/markdown
+  - text/plain
