--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,18 @@
 ---
-- name: Ensure apt requirements
-  ansible.builtin.package:
-    name: apt-transport-https
-    state: present
+- name: Remove legacy apt file
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/sublime.list
+    state: absent
 
-- name: Add the Sublime pgp key
-  ansible.builtin.apt_key:
-    url: https://download.sublimetext.com/sublimehq-pub.gpg
+- name: Add Sublime repo using key from URL
+  ansible.builtin.deb822_repository:
+    name: sublimetext
+    types: [deb]
+    uris: "https://download.sublimetext.com/"
+    suites: ["apt/stable/"]
+    signed_by: https://download.sublimetext.com/sublimehq-pub.gpg
     state: present
-
-- name: Add Sublime Repository
-  ansible.builtin.apt_repository:
-    repo: "deb https://download.sublimetext.com/ apt/stable/"
-    state: present
-    filename: sublime
+    enabled: true
 
 - name: Install Sublime-Text
   ansible.builtin.apt:
