ansible vs. loop blocks

--- a/tasks/set_default_app.yml
+++ b/tasks/set_default_app.yml
@@ -1,8 +1,9 @@
 ---
 - name: Set Sublime default application
   community.general.gio_mime:
-    mime_type: "{{ item }}"
+    mime_type: "{{ mimetype }}"
     handler: sublime_text.desktop
   loop: "{{ sublime_mimetypes }}"
+  loop_var: mimetype
   become: true
-  become_user: "{{ os_user }}"
+  become_user: "{{ item }}"
